# CANopenEditorLB

EDSEditorGUI/: DevicePDOView2.cs  (+1 more)
python_port/: .gitignore  README.md  requirements.txt  setup.cfg
python_port/config/: README.md
python_port/data/: README.md
python_port/data/samples/: demo_device.c  demo_device.eds  demo_device.h  demo_device.xdd  incomplete_device.xdd  mixed_case_device.xdd
python_port/docs/: csharp_analysis.md  environment_setup.md  porting_guide.md  requirements.md
python_port/od_examples/: README.md
python_port/src/canopen_node_editor/: __init__.py  __main__.py  app.py  validation.py
python_port/src/canopen_node_editor/exporters/: __init__.py  c7h.py
python_port/src/canopen_node_editor/gui/: __init__.py  application.py  main_window.py
python_port/src/canopen_node_editor/gui/dialogs/: __init__.py  add_object.py
python_port/src/canopen_node_editor/gui/models/: object_dictionary.py
python_port/src/canopen_node_editor/model/: __init__.py  device.py  enums.py  templates.py
python_port/src/canopen_node_editor/parsers/: __init__.py  eds.py  xdd.py
python_port/src/canopen_node_editor/services/: __init__.py  network.py  profiles.py  reporting.py  settings.py
python_port/tests/: __init__.py  test_canopennode_exporter.py  test_cli.py  test_device_editor_page.py  test_eds_parser.py  test_gui_main_window.py  test_network_manager.py  test_object_dictionary_widget.py  test_paths.py  test_pdo_editor_widget.py  test_profile_repository.py  test_reporting_service.py  test_settings_service.py  test_validation.py  test_xdd_parser.py
(+22 files in other folders)
