[metadata]
name = canopen-node-editor
version = 0.1.0.dev0
description = Python port of the CANopenNode Editor
license = GPL-3.0-only
author = OpenAI
url = https://github.com/OpenAI/CANopenEditorLB

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    pyside6
    qt-material
    pydantic
    platformdirs
    jinja2

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-qt
